--- a/package.json
+++ b/package.json
@@ -9,24 +9,25 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
-    "register-service-worker": "^1.0.0",
-    "vue": "^2.5.17",
-    "vue-class-component": "^6.0.0",
-    "vue-property-decorator": "^7.0.0",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "register-service-worker": "1.5.2",
+    "vue": "2.5.17",
+    "vue-class-component": "6.2.0",
+    "vue-property-decorator": "7.0.0",
+    "vue-router": "3.0.1",
+    "vuex": "3.0.1"
   },
   "devDependencies": {
-    "@types/jest": "^23.1.4",
-    "@vue/cli-plugin-pwa": "^3.0.1",
-    "@vue/cli-plugin-typescript": "^3.0.1",
-    "@vue/cli-plugin-unit-jest": "^3.0.1",
-    "@vue/cli-service": "^3.0.1",
-    "@vue/test-utils": "^1.0.0-beta.20",
-    "node-sass": "^4.9.0",
-    "sass-loader": "^7.0.1",
-    "ts-jest": "^23.0.0",
-    "typescript": "^3.0.0",
-    "vue-template-compiler": "^2.5.17"
+    "@types/jest": "23.3.1",
+    "@vue/cli-plugin-pwa": "3.0.1",
+    "@vue/cli-plugin-typescript": "3.0.1",
+    "@vue/cli-plugin-unit-jest": "3.0.1",
+    "@vue/cli-service": "3.0.1",
+    "@vue/test-utils": "1.0.0-beta.24",
+    "node-sass": "4.9.3",
+    "sass-loader": "7.1.0",
+    "ts-jest": "23.1.3",
+    "typescript": "3.0.1",
+    "vue-template-compiler": "2.5.17",
+    "worker-loader": "2.0.0"
   }
 }
